k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zomato
  labels:
    app: zomato-clone
---
